--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.1.1",
     "autoprefixer": "^10.4.21",
     "express": "^4.18.2",
+    "my-angular-project": "file:",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.17",
